tests/baselines/reference/letAndVarRedeclaration.errors.txt
tests/cases/compiler/letAndVarRedeclaration.ts(3,5): error TS2451: Cannot redeclare block-scoped variable 'e0'.
tests/cases/compiler/letAndVarRedeclaration.ts(4,5): error TS2451: Cannot redeclare block-scoped variable 'e0'.
tests/cases/compiler/letAndVarRedeclaration.ts(5,10): error TS2451: Cannot redeclare block-scoped variable 'e0'.
tests/cases/compiler/letAndVarRedeclaration.ts(8,9): error TS2451: Cannot redeclare block-scoped variable 'x1'.
tests/cases/compiler/letAndVarRedeclaration.ts(9,9): error TS2451: Cannot redeclare block-scoped variable 'x1'.
tests/cases/compiler/letAndVarRedeclaration.ts(10,14): error TS2451: Cannot redeclare block-scoped variable 'x1'.
tests/cases/compiler/letAndVarRedeclaration.ts(14,9): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/letAndVarRedeclaration.ts(16,13): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/letAndVarRedeclaration.ts(19,18): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/letAndVarRedeclaration.ts(24,9): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(25,9): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(26,14): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(30,9): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(32,13): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(35,18): error TS2451: Cannot redeclare block-scoped variable 'x2'.
tests/cases/compiler/letAndVarRedeclaration.ts(39,5): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(40,10): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(44,9): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(45,14): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(50,9): error TS2451: Cannot redeclare block-scoped variable 'x11'.
tests/cases/compiler/letAndVarRedeclaration.ts(51,14): error TS2451: Cannot redeclare block-scoped variable 'x11'.


==== tests/cases/compiler/letAndVarRedeclaration.ts (21 errors) ====
    
    
    let e0
        ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'e0'.
    var e0;
        ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'e0'.
    function e0() { }
             ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'e0'.
    
    function f0() {
        let x1;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x1'.
        var x1;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x1'.
        function x1() { }
                 ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x1'.
    }
    
    function f1() {
        let x;
            ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        {
            var x;
                ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        }
        {
            function x() { }
                     ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
        }
    }
    
    module M0 {
        let x2;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        var x2;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        function x2() { }
                 ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
    }
    
    module M1 {
        let x2;
            ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        {
            var x2;
                ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        }
        {
            function x2() { }
                     ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x2'.
        }
    }
    
    let x11;
        ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
    for (var x11; ;) {
             ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
    }
    
    function f2() {
        let x11;
            ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        for (var x11; ;) {
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        }
    }
    
    module M2 {
        let x11;
            ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        for (var x11; ;) {
                 ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'x11'.
        }
    }